# perfect-forwarding

./: .gitignore  CMakeLists.txt  PerfectForwardingC++.md  README.md
docs/: c14-lambdas-and-perfect-forwarding.html
perfect_project/: CMakeLists.txt
perfect_project/include/: perfectf.hh
perfect_project/src/: perfect.cc  refs_lrefs_urefs.cc
scripts/: run.sh
